infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supermarket-ingress
  namespace: supermarket
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: supermarket.local
      http:
        paths:
          - path: /api/v1/customers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer-service
                port:
                  number: 8081
          - path: /api/v1/sales-points(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sales-point-service
                port:
                  number: 8082
          - path: /api/v1/sales(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sales-service
                port:
                  number: 8083
          - path: /api/v1/inventory(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-service
                port:
                  number: 8084
